--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 :root {
   box-sizing: border-box;
+
+  --color-main: #7048e8;
+  --color-gray: #dee2e6;
+  --color-dark-gray: #868e96;
 }
 
 * {
@@ -11,4 +15,239 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 8px 16px;
+  border-radius: 1000px;
+  border: none;
+  background-color: var(--color-main);
+  color: #fff;
+  cursor: pointer;
+
+  transition: transform 0.15s;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
+  min-height: 100vh;
+}
+
+.sidebar {
+  grid-row: 1 / -1;
+  background-color: var(--color-main);
+  color: #fff;
+  padding: 1rem;
+  padding-right: 3rem;
+  font-size: 1.25rem;
+
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  gap: 48px;
+}
+
+.sidebar li {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  cursor: pointer;
+  padding: 0.5em;
+  border-radius: 0.25em;
+  transition: 150ms ease-in-out;
+  transition-property: color, background-color;
+}
+
+.sidebar li:hover {
+  background-color: #fff;
+  color: var(--color-main);
+}
+
+.sidebar .icon {
+  width: 1.25em;
+  height: 1.25em;
+}
+
+.header {
+  grid-row: 1;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  padding: 12px 48px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+
+.header .search {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 1em;
+}
+
+.header .actions {
+  display: flex;
+  justify-self: end;
+  gap: 2rem;
+}
+
+.header .actions > * {
+  width: 7rem;
+}
+
+.header .account {
+  justify-self: end;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  font-weight: bold;
+}
+
+.header svg {
+  color: var(--color-main);
+}
+
+.header .profile-picture {
+  width: 2.5rem;
+}
+
+.header .notification-bell {
+  width: 1.5rem;
+}
+
+.header .profile-picture.large {
+  width: 4rem;
+}
+
+.header .greeting {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-weight: bold;
+}
+
+.header .greeting p:first-child {
+  font-size: 0.75rem;
+}
+
+input {
+  border-radius: 1000px;
+  border: none;
+  outline: none;
+  background-color: var(--color-gray);
+  padding: 4px 12px;
+}
+
+.main {
+  background-color: var(--color-gray);
+  padding: 2rem 1rem;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 2rem;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cards {
+  flex: 1;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+.cards .card p {
+  color: var(--color-dark-gray);
+  font-size: 0.9em;
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.card .icons {
+  align-self: flex-end;
+  display: flex;
+  align-items: flex-end;
+  gap: 0.5rem;
+  flex: 1;
+}
+
+.main svg {
+  width: 1.25em;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.info .card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.announcements,
+.trending {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+}
+
+.announcement {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.announcement p {
+  font-size: 0.8em;
+  color: var(--color-dark-gray);
+}
+
+.trending .account {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.trending .account .profile-picture {
+  width: 48px;
+  height: 48px;
+}
+
+.trending .handle {
+  font-weight: bold;
+}
+
+.trending .name {
+  color: var(--color-dark-gray);
 }
